--- a/css/style.css
+++ b/css/style.css
@@ -120,4 +120,12 @@ body {
 
 /**/
 @media (max-width: 575.98px) {
+   .my-section-title, .my-section-content, .my-footer{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .my-section-content-pdf{
+        font-size: 16px;
+    }
 }
