--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     background-image: linear-gradient(-20deg, #FC6076 0%, #FF9A44 100%);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: "Varela Round", sans-serif !important;
+    font-family: "Montserrat", sans-serif !important;
     color: white;
 }
 
@@ -126,6 +126,11 @@ body {
     }
 
     .my-section-content-pdf{
-        font-size: 16px;
+        font-size: 18px;
+    }
+
+    .my-section-content-image{
+        height: 4em;
+        width: 4em;
     }
 }
