--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     background-image: linear-gradient(-20deg, #FC6076 0%, #FF9A44 100%);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: "Montserrat", sans-serif !important;
+    font-family: "Varela Round", sans-serif !important;
     color: white;
 }
 
