--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 body {
     height: 100%;
     margin: 0;
-    background-image: linear-gradient(-20deg, #FC6076 0%, #FF9A44 100%);
+    background-image: linear-gradient(-225deg, #65379B 0%, #886AEA 53%, #6457C6 100%);
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: "Varela Round", sans-serif !important;
