--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,12 @@ body {
 .my-secton-content-period{
     color: #bdc3c7;
 }
+
+@media only screen and (max-width: 600px) {
+    body{
+        font-size: 16px;
+    }
+    .my-name, .my-position, .my-social, .my-section-title{
+        text-align: center !important;
+    }
+}
